<!-- vim: syntax=Markdown -->

# Changelog

## v0.5.5 (upcoming)

- All: Add russian translation. Thanks, @ViktorOn! ([#611](https://github.com/dynobo/normcap/pull/611))
- All: Update spanish translation. Thanks, @haggen88! ([#614](https://github.com/dynobo/normcap/pull/614))
- Linux: Add `xsel` as another clipboard handler. Try `--clipboard-handler xsel` if
  Normcap's result isn't copied to the clipboard correctly.
- Linux: Fix clipboard on Gnome 46 + Wayland. ([#620](https://github.com/dynobo/normcap/pull/620))

## v0.5.4 (2024-01-15)

- All: Fix duplicate capture window if started twice
  ([#580](https://github.com/dynobo/normcap/issues/580))
- Linux: Improve robustness of window positioning on Wayland.
- Linux: Improve debug output regarding clipboard methods.
  ([#581](https://github.com/dynobo/normcap/issues/581))

## v0.5.3 (2024-01-04)

- All: Add CLI argument for selecting clipboard handler (mainly intended for debugging).
- Linux: Revert clipboard handling to use Qt on Xorg, wl-clipboard on Wayland, and xclip
  only on AwesomeWM and Gnome 45. ([#581](https://github.com/dynobo/normcap/issues/581))

## v0.5.2 (2023-12-12)

- All: Fix `normcap` entry point to non-existing function.

## v0.5.1 (2023-12-12)

- All: Fix accidentally removed `normcap` entry point for Python package.

## v0.5.0 (2023-12-12)

- All: Add Swedish [localization](./normcap/resources/locales/README.md). Thanks,
  [@eson57](https://github.com/eson57)!
  ([#599](https://github.com/dynobo/normcap/pull/566))
- All: Fix issue where introduction window was still visible on the screen capture UI.
  ([#536 comment](https://github.com/dynobo/normcap/issues/536#issuecomment-1752110232))
- All: Fix missing line breaks in "raw"-mode
  ([#502 comment](https://github.com/dynobo/normcap/issues/502#issuecomment-1726291608))
- All: Improve line breaks for paragraphs detected in "parse"-mode
  ([#502](https://github.com/dynobo/normcap/issues/502))